@@ -1,6 +1,8 @@
 version 0.3.0
 - Added expression_logger: log custom expressions
 - Logging now also works for functions that remove the logging attribute.
+- The 'cellwise' logger is now compatible with 'tibble' objects (thanks to
+  Blain Bateman for reporting). 
 
 version 0.2.0
 - Added %L>% as synonym to avoid possible confusion with pipeR::`%>>%`
